Fixed bug #38802 (max_redirects and ignore_errors) (patch by datibbaw@php.net)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@280639 c90b9560-bf6c-de11-be94-00142212c4b1